# ros_tensorflow_tutorial

./: LICENSE.txt  README.md  requirements.txt
ros_tensorflow/: CMakeLists.txt  package.xml  setup.py
ros_tensorflow/nodes/: node.py
ros_tensorflow/src/ros_tensorflow/: model.py
ros_tensorflow_msgs/: CMakeLists.txt  package.xml
ros_tensorflow_msgs/action/: Train.action
ros_tensorflow_msgs/srv/: Predict.srv
