<?xml version="1.0"?>
<package format="2">
  <name>ros_tensorflow</name>
  <version>0.0.1</version>
  <description>The ros_tensorflow package</description>
  <maintainer email="jacko.kaiser@gmail.com">Jacques Kaiser</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>ros_tensorflow_msgs</depend>

  <export>
  </export>
</package>
